--- a/lerna.json
+++ b/lerna.json
@@ -6,7 +6,7 @@
   "command": {
     "version": {
       "allowBranch": ["release", "develop"],
-      "message": "chore(release): publish %s"
+      "message": "chore: publish %s"
     }
   }
 }
