--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,7 @@
   "version": "independent",
   "command": {
     "version": {
-      "allowBranch": ["release", "develop"],
+      "allowBranch": ["main", "develop"],
       "message": "chore: publish release"
     }
   }
