--- a/packages/module-one/package.json
+++ b/packages/module-one/package.json
@@ -1,6 +1,6 @@
 {
   "name": "module-one",
-  "version": "0.0.5",
+  "version": "0.0.6-dev.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
